--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,7 +70,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
@@ -150,7 +150,11 @@ GlobalAssetPicker.ActiveFrontendFilters=
 GlobalAssetPicker.EnabledFrontendFilters=
 GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -159,9 +163,9 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=313.000 Y=153.000
+ScreenPosition=X=406.000 Y=54.000
 WindowSize=X=1283.000 Y=723.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1027,6 +1031,10 @@ TextureEditor.TimeStamp=2022.11.02-13.15.30
 TextureEditor.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2022.11.02-13.15.18
 BlueprintGraph.LastCompileMethod=Unknown
+Voice.TimeStamp=2022.11.02-13.15.31
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2022.11.02-13.15.25
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1096,16 +1104,161 @@ MapBuildDataRegistry.Lighting=True
 2DSideScrollerOverview_C.Testing=True
 2DSideScrollerOverview_C.Tutorial=True
 2DSideScrollerOverview_C.Stages=True
+PaperFlipbook.Sprite=True
+2DSideScrollerCharacter_C.Tick=True
+2DSideScrollerCharacter_C.Default=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.ComponentTick=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Navigation=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.VirtualTexture=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+PaperFlipbookComponent.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+SphereComponent.TransformCommon=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Rendering=True
+SphereComponent.Tags=True
+SphereComponent.Cooking=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+CameraComponent.TransformCommon=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+PaperTileSet.TileSet=True
+PaperTileSet.SingleTileEditor=True
+PaperTileMap.Tile Map=True
+PaperTileMap.SelectedLayer=True
+PaperTileMap.Setup=True
+PaperTileMap.Collision=True
+PaperTileMap.File Path=True
+PaperTileMapActor.TransformCommon=True
+PaperTileMapActor.Tile Map=True
+PaperTileMapActor.Materials=True
+PaperTileMapActor.Physics=True
+PaperTileMapActor.Collision=True
+PaperTileMapActor.Lighting=True
+PaperTileMapActor.Rendering=True
+PaperTileMapActor.Navigation=True
+PaperTileMapActor.VirtualTexture=True
+PaperTileMapActor.Tags=True
+PaperTileMapActor.Activation=True
+PaperTileMapActor.Cooking=True
+PaperTileMapActor.Replication=True
+PaperTileMapActor.Input=True
+PaperTileMapActor.Actor=True
+K2Node_InputAction.Input=True
+K2Node_InputTouch.Input=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
+CapsuleComponent.Variable=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/2DSideScrollerOverview
-MRUItem1=/Game/2DSideScrollerBP/__Lastname_CharacterComplete
-MRUItem2=/Game/2DSideScrollerBP/P4_Sersch_Building_A_Tileset
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/2DSideScroller/Textures/Level1
+MRUItem2=/Game/2DSideScroller/Textures/Level1Map
+MRUItem3=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem4=/Game/2DSideScroller/Textures/P4_Sersch_Building_A_Tileset_TileSet
+MRUItem5=/Game/2DSideScroller/Animations/PC_Run
+MRUItem6=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem7=/Game/2DSideScroller/Animations/PC_Jump
+MRUItem8=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem9=/Game/2DSideScroller/Animations/PC_Attack
+MRUItem10=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem11=/Game/2DSideScrollerBP/2DSideScrollerOverview
+MRUItem12=/Game/2DSideScrollerBP/__Lastname_CharacterComplete
+MRUItem13=/Game/2DSideScrollerBP/P4_Sersch_Building_A_Tileset
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/__Lastname_CharacterComplete.__Lastname_CharacterComplete=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap_BuiltData.2DSideScrollerExampleMap_BuiltData=1
 /Game/2DSideScrollerBP/2DSideScrollerOverview.2DSideScrollerOverview=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
+/Game/2DSideScroller/Animations/PC_Run.PC_Run=1
+/Game/2DSideScroller/Textures/Level1.Level1=1
+/Game/2DSideScroller/Textures/Level1Map.Level1Map=1
+/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1142,4 +1295,18 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[DetailPropertyExpansion]
+PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
+Object=
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0].Vertices.Vertices[22]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/Textures/Level1Map.Level1Map;
 
