--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,12 +152,21 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+GlobalAssetPicker.ActiveTypeFilters=
+GlobalAssetPicker.EnabledTypeFilters=
+GlobalAssetPicker.ActiveFrontendFilters=
+GlobalAssetPicker.EnabledFrontendFilters=
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/HUD/MainUI.MainUI
+OpenAssetsAtExit=/Game/BP/BP_Coins.BP_Coins
 
 [RootWindow]
 ScreenPosition=X=410.000 Y=292.000
@@ -1047,26 +1056,26 @@ Text3DEditor.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/2DSideScroller/Data/AnimationState
-MRUItem3=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem4=/Game/2DSideScroller/Textures/camelpyramid
-MRUItem5=/Game/2DSideScroller/Sprites/NewMaterial
-MRUItem6=/Game/StarterContent/Textures/T_Metal_Rust_D
-MRUItem7=/Game/2DSideScroller/Animations/P_Ambient_Dust
-MRUItem8=/Game/2DSideScroller/Textures/2DBackground
-MRUItem9=/Game/2DSideScroller/Textures/SandyBackround
-MRUItem10=/Game/StarterContent/Textures/T_Rock_Sandstone_D
-MRUItem11=/Game/StarterContent/Particles/Materials/M_Dust_Particle
-MRUItem12=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
-MRUItem13=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
-MRUItem14=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem15=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem16=/Game/2DSideScroller/Animations/PC_Run
-MRUItem17=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem18=/Game/2DSideScroller/Animations/PC_JumpUp
-MRUItem19=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem0=/Game/2DSideScroller/Sprites/Coin
+MRUItem1=/Game/BP/BP_Coins
+MRUItem2=/Game/HUD/MainUI
+MRUItem3=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem5=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem6=/Game/2DSideScroller/Data/AnimationState
+MRUItem7=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem8=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem9=/Game/2DSideScroller/Sprites/NewMaterial
+MRUItem10=/Game/StarterContent/Textures/T_Metal_Rust_D
+MRUItem11=/Game/2DSideScroller/Animations/P_Ambient_Dust
+MRUItem12=/Game/2DSideScroller/Textures/2DBackground
+MRUItem13=/Game/2DSideScroller/Textures/SandyBackround
+MRUItem14=/Game/StarterContent/Textures/T_Rock_Sandstone_D
+MRUItem15=/Game/StarterContent/Particles/Materials/M_Dust_Particle
+MRUItem16=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
+MRUItem17=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
+MRUItem18=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem19=/Game/2DSideScroller/Animations/PC_Shoot
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1712,18 +1721,83 @@ Text3DActor.Cooking=True
 Text3DActor.Replication=True
 Text3DActor.Input=True
 Text3DActor.Actor=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+MainUI_C.Appearance=True
+MainUI_C.Designer=True
+MainUI_C.Input=True
+MainUI_C.Interaction=True
+MainUI_C.Performance=True
+MainUI_C.Layout=True
+MainUI_C.Behavior=True
+MainUI_C.Render Transform=True
+MainUI_C.Accessibility=True
+MainUI_C.Clipping=True
+MainUI_C.Navigation=True
+MainUI_C.Localization=True
+BP_Coins_C.Tick=True
+BP_Coins_C.Replication=True
+BP_Coins_C.Rendering=True
+BP_Coins_C.Collision=True
+BP_Coins_C.Actor=True
+BP_Coins_C.Input=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+PaperSpriteComponent.Variable=True
+PaperSpriteComponent.Sockets=True
+PaperSpriteComponent.ComponentTick=True
+PaperSpriteComponent.ComponentReplication=True
+PaperSpriteComponent.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+BP_Coins_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
 /Game/2DSideScroller/Animations/PC_Idle.PC_Idle=1
 /Game/2DSideScroller/Animations/PC_JumpDown.PC_JumpDown=1
 /Game/2DSideScroller/Animations/PC_JumpUp.PC_JumpUp=1
-/Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile=1
+/Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile=0
 /Game/2DSideScroller/Animations/PC_Run.PC_Run=1
 /Game/2DSideScroller/Animations/PC_Shoot.PC_Shoot=1
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=0
 /Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet.Level1_4_Adkins_BuildingTileSet=0
-/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap=1
+/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap=0
 /Game/StarterContent/Particles/Materials/M_Dust_Particle.M_Dust_Particle=0
 /Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D=0
 /Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite=0
@@ -1735,7 +1809,7 @@ Text3DActor.Actor=True
 InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
-PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[3]\" "
+PaperFlipbook="\"Object.Sprite.KeyFrames\" "
 Object=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1799,11 +1873,12 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Text3D.Text3DActor;/Engine/Transient.ActorFactoryText3D_0
+RecentlyPlaced=/Game/BP/BP_Coins.BP_Coins;
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFactorySphereReflectionCapture_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DecalActor;/Engine/Transient.ActorFactoryDeferredDecal_0
@@ -1911,4 +1986,80 @@ LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
 UserDefinedEnum.Enumerators=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[PathColor]
+/Game/HUD=(R=0.175394,G=0.500000,B=0.041282,A=1.000000)
+/Game/BP=(R=0.000000,G=0.136934,B=0.500000,A=1.000000)
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
