--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -164,9 +164,7 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/HUD/MainUI.MainUI
-OpenAssetsAtExit=/Game/BP/BP_Coins.BP_Coins
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap
 
 [RootWindow]
 ScreenPosition=X=410.000 Y=292.000
@@ -1056,12 +1054,12 @@ Text3DEditor.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Sprites/Coin
-MRUItem1=/Game/BP/BP_Coins
-MRUItem2=/Game/HUD/MainUI
-MRUItem3=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem5=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem0=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem1=/Game/2DSideScroller/Sprites/Coin
+MRUItem2=/Game/BP/BP_Coins
+MRUItem3=/Game/HUD/MainUI
+MRUItem4=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
 MRUItem6=/Game/2DSideScroller/Data/AnimationState
 MRUItem7=/Game/2DSideScroller/Sprites/Background_Sprite
 MRUItem8=/Game/2DSideScroller/Textures/camelpyramid
@@ -1804,6 +1802,8 @@ BP_Coins_C.TransformCommon=True
 /Game/2DSideScroller/Textures/2DBackground.2DBackground=1
 /Game/2DSideScroller/Animations/P_Ambient_Dust.P_Ambient_Dust=0
 /Game/StarterContent/Textures/T_Metal_Rust_D.T_Metal_Rust_D=0
+/Game/HUD/MainUI.MainUI=0
+/Game/BP/BP_Coins.BP_Coins=0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
