Added Pause Menu, Options Menu, And Quit Game (still need to add options and main menu fully

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,6 +100,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -147,7 +148,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Engine/EngineFonts
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -163,8 +164,9 @@ GlobalAssetPicker.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap
+CleanShutdown=True
+OpenAssetsAtExit=/Game/HUD/PauseMenuWidget.PauseMenuWidget
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
 ScreenPosition=X=410.000 Y=292.000
@@ -1049,31 +1051,33 @@ Text3D.TimeStamp=2021.08.31-17.19.29
 Text3D.LastCompileMethod=Unknown
 Text3DEditor.TimeStamp=2021.08.31-17.19.29
 Text3DEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.08.31-17.14.52
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP/BP_Coins
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/HUD/MainUI
-MRUItem3=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem4=/Game/2DSideScroller/Sprites/Coin
-MRUItem5=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem6=/Game/2DSideScroller/Data/AnimationState
-MRUItem7=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem8=/Game/2DSideScroller/Textures/camelpyramid
-MRUItem9=/Game/2DSideScroller/Sprites/NewMaterial
-MRUItem10=/Game/StarterContent/Textures/T_Metal_Rust_D
-MRUItem11=/Game/2DSideScroller/Animations/P_Ambient_Dust
-MRUItem12=/Game/2DSideScroller/Textures/2DBackground
-MRUItem13=/Game/2DSideScroller/Textures/SandyBackround
-MRUItem14=/Game/StarterContent/Textures/T_Rock_Sandstone_D
-MRUItem15=/Game/StarterContent/Particles/Materials/M_Dust_Particle
-MRUItem16=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
-MRUItem17=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
-MRUItem18=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem19=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/HUD/PauseMenuWidget
+MRUItem2=/Game/BP/BP_Coins
+MRUItem3=/Game/HUD/MainUI
+MRUItem4=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem5=/Game/2DSideScroller/Sprites/Coin
+MRUItem6=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem7=/Game/2DSideScroller/Data/AnimationState
+MRUItem8=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem9=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem10=/Game/2DSideScroller/Sprites/NewMaterial
+MRUItem11=/Game/StarterContent/Textures/T_Metal_Rust_D
+MRUItem12=/Game/2DSideScroller/Animations/P_Ambient_Dust
+MRUItem13=/Game/2DSideScroller/Textures/2DBackground
+MRUItem14=/Game/2DSideScroller/Textures/SandyBackround
+MRUItem15=/Game/StarterContent/Textures/T_Rock_Sandstone_D
+MRUItem16=/Game/StarterContent/Particles/Materials/M_Dust_Particle
+MRUItem17=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet
+MRUItem18=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet_TileSet
+MRUItem19=/Game/2DSideScroller/Animations/PC_Idle
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1784,6 +1788,45 @@ SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
 BP_Coins_C.TransformCommon=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Localization=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+K2Node_VariableSet.Events=True
+K2Node_InputAction.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -1820,6 +1863,14 @@ PaperCharacter=
 Character=
 Pawn=
 PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[0]\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Button="\"Object.Appearance.WidgetStyle\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" "
+PanelWidget=
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1979,6 +2030,75 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 [DetailCustomWidgetExpansion]
 2DSideScrollerCharacter_C=
 CapsuleComponent=
+CryptoKeysSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+GeneralProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+GameplayTagsSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+GameMapsSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+MoviePlayerSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+ProjectPackagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+HardwareTargetingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AssetManagerSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AssetToolsSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AISystem=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AnimationSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AudioSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+ChaosSolverSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+CollisionProfile=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+ConsoleSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+CookerSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+CrowdManager=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+DebugCameraControllerSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+GarbageCollectionSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+Engine=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+HierarchicalLODSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+InputSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+LandscapeSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+RecastNavMesh=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+NavigationSystemV1=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+NetworkSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+PhysicsSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+RendererSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+RendererOverrideSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+SlateSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+StreamingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+TutorialSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+UserInterfaceSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+LevelEditor2DSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+EditorProjectAppearanceSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+BlueprintEditorProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+ClassViewerProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+MeshSimplificationSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+PaperImporterSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+SkeletalMeshSimplificationSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+StructViewerProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+TextureImportSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+UMGEditorProjectSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AndroidRuntimeSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+ShaderPlatformQualitySettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AndroidSDKSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+IOSRuntimeSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+LinuxTargetSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+MacTargetSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+LuminRuntimeSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+MagicLeapSDKSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+WindowsTargetSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+AvfMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+GooglePADRuntimeSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+ImgMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+LevelSequenceEditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+MagicLeapSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+MagicLeapARPinSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+NiagaraSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+NiagaraEditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+SteamVREditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+TcpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+UdpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
+WmfMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause Game,
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2062,4 +2182,7 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[MessageLog]
+LastLogListing=EditorErrors
 
