began Work on Gravity Flip; Needs Debuging

--- a/GameDesign2/Config/DefaultEngine.ini
+++ b/GameDesign2/Config/DefaultEngine.ini
@@ -27,3 +27,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_2DSideScrollerBP",NewGameName="/Script/GameDesign2")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/GameDesign2")
 
+[/Script/Engine.PhysicsSettings]
+bEnable2DPhysics=True
+bSimulateAnimPhysicsAfterReset=True
+
