--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,16 +157,8 @@ LastLevel=/Game/2DSideScrollerBP/Maps/Tutorial1
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/BulletEnemy.BulletEnemy
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/FullLevel_Map.FullLevel_Map
-OpenAssetsAtExit=/Game/2DSideScroller/Animations/Enemy_Hurt.Enemy_Hurt
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Heal.Heal
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/HpHud.HpHud
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy
-OpenAssetsAtExit=/Game/Data/AnimationStateEnemy.AnimationStateEnemy
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP.Tutorial_1_TP
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1103,26 +1095,26 @@ MRUItem6=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
-MRUItem2=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem5=/Game/2DSideScrollerBP/Maps/FullLevel_Map
-MRUItem6=/Game/2DSideScroller/Animations/Enemy_Hurt
-MRUItem7=/Game/Data/AnimationStateEnemy
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/HpHud
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Heal
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/TutorialEnemy1
-MRUItem13=/Game/2DSideScroller/Textures/Heart_Flipbook
-MRUItem14=/Game/2DSideScroller/Textures/Heart1
-MRUItem15=/Game/2DSideScroller/Textures/Heart_Sprite_0
-MRUItem16=/Game/2DSideScrollerBP/Maps/Tutorial4
-MRUItem17=/Game/2DSideScrollerBP/Blueprints/DeathPlane
-MRUItem18=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem19=/Game/2DSideScrollerBP/Blueprints/Tutorial_4_TP
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem2=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
+MRUItem4=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
+MRUItem7=/Game/2DSideScrollerBP/Maps/FullLevel_Map
+MRUItem8=/Game/2DSideScroller/Animations/Enemy_Hurt
+MRUItem9=/Game/Data/AnimationStateEnemy
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/HpHud
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Heal
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/TutorialEnemy1
+MRUItem14=/Game/2DSideScroller/Textures/Heart_Flipbook
+MRUItem15=/Game/2DSideScroller/Textures/Heart1
+MRUItem16=/Game/2DSideScroller/Textures/Heart_Sprite_0
+MRUItem17=/Game/2DSideScrollerBP/Maps/Tutorial4
+MRUItem18=/Game/2DSideScrollerBP/Blueprints/DeathPlane
+MRUItem19=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2031,7 +2023,7 @@ InstalledPlugins=XRVisualization
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=CameraComponent.PostProcess.Lens,
-2DSideScrollerCharacter_C=CameraComponent.PostProcess.Lens,
+2DSideScrollerCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
 Breakable_Block_C=CameraComponent.PostProcess.Lens,
@@ -2171,13 +2163,13 @@ PreserveScaleRatio=False
 
 [DetailPropertyExpansion]
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-SceneComponent=
-ActorComponent=
-Object=
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PaperSpriteComponent=
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 StaticMeshComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2221,10 +2213,10 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagar
 TakeRecorderProjectSettings="\"Object.Take Recorder.Settings.DefaultTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].ExcludePropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1].DefaultPropertyTracks\" "
 CapsuleComponent=
 Enemy_C="\"Object.Actor.Tags\" "
-PaperCharacter="\"Object.Actor.Tags\" "
-Character="\"Object.Actor.Tags\" "
-Pawn="\"Object.Actor.Tags\" "
-2DSideScrollerCharacter_C="\"Object.Actor.Tags\" "
+PaperCharacter=
+Character=
+Pawn=
+2DSideScrollerCharacter_C=
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
@@ -2398,7 +2390,6 @@ CustomFavorites=(FieldName="/Script/Engine.Actor:GetTransform",NodeName="/Script
 CustomFavorites=(FieldName="/Script/Engine.Actor:K2_DestroyActor",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
-CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_IfThenElse")
 CurrentProfile=CustomProfile
 
 [WidgetTemplatesExpanded]
