added thing that does thing

--- a/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
@@ -8,5 +8,5 @@ HostOverride=
 Provider=Git
 
 [GitSourceControl.GitSourceControlSettings]
-BinaryPath=C:/Program Files/Git/bin/git.exe
+BinaryPath=C:/Users/5926001686/AppData/Local/Programs/Git/bin/git.exe
 
