--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -157,8 +157,6 @@ LastLevel=/Game/2DSideScrollerBP/Maps/Tutorial1
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP.Tutorial_1_TP
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1095,26 +1093,26 @@ MRUItem6=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
 MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
-MRUItem4=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem7=/Game/2DSideScrollerBP/Maps/FullLevel_Map
-MRUItem8=/Game/2DSideScroller/Animations/Enemy_Hurt
-MRUItem9=/Game/Data/AnimationStateEnemy
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/HpHud
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/Heal
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/TutorialEnemy1
-MRUItem14=/Game/2DSideScroller/Textures/Heart_Flipbook
-MRUItem15=/Game/2DSideScroller/Textures/Heart1
-MRUItem16=/Game/2DSideScroller/Textures/Heart_Sprite_0
-MRUItem17=/Game/2DSideScrollerBP/Maps/Tutorial4
-MRUItem18=/Game/2DSideScrollerBP/Blueprints/DeathPlane
-MRUItem19=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/Bullet
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
+MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
+MRUItem8=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
+MRUItem10=/Game/2DSideScrollerBP/Maps/FullLevel_Map
+MRUItem11=/Game/2DSideScroller/Animations/Enemy_Hurt
+MRUItem12=/Game/Data/AnimationStateEnemy
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/HpHud
+MRUItem14=/Game/2DSideScrollerBP/Blueprints/Heal
+MRUItem15=/Game/2DSideScrollerBP/Blueprints/TutorialEnemy1
+MRUItem16=/Game/2DSideScroller/Textures/Heart_Flipbook
+MRUItem17=/Game/2DSideScroller/Textures/Heart1
+MRUItem18=/Game/2DSideScroller/Textures/Heart_Sprite_0
+MRUItem19=/Game/2DSideScrollerBP/Maps/Tutorial4
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1969,6 +1967,16 @@ FullLevel_TP_C.Collision=True
 FullLevel_TP_C.Actor=True
 FullLevel_TP_C.Input=True
 FullLevel_TP_C.TransformCommon=True
+Orb_Shooter_C.Tick=True
+Orb_Shooter_C.Replication=True
+Orb_Shooter_C.Rendering=True
+Orb_Shooter_C.Collision=True
+Orb_Shooter_C.Actor=True
+Orb_Shooter_C.Input=True
+Orb_Shooter_C.TransformCommon=True
+GameNetworkManager.TransformCommon=True
+GameNetworkManager.Replication=True
+GameNetworkManager.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2016,6 +2024,7 @@ FullLevel_TP_C.TransformCommon=True
 /Game/2DSideScrollerBP/Maps/FullLevel_Map.FullLevel_Map=1
 /Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane=1
 /Game/2DSideScroller/Textures/Heart_Flipbook.Heart_Flipbook=1
+/Game/2DSideScrollerBP/Blueprints/BulletEnemy.BulletEnemy=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2163,13 +2172,13 @@ PreserveScaleRatio=False
 
 [DetailPropertyExpansion]
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
+Object="\"Object.Tags.ComponentTags\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PaperSpriteComponent=
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent=
+PrimitiveComponent=
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 StaticMeshComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2213,12 +2222,13 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagar
 TakeRecorderProjectSettings="\"Object.Take Recorder.Settings.DefaultTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].ExcludePropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1].DefaultPropertyTracks\" "
 CapsuleComponent=
 Enemy_C="\"Object.Actor.Tags\" "
-PaperCharacter=
-Character=
-Pawn=
-2DSideScrollerCharacter_C=
+PaperCharacter="\"Object.Actor.Tags\" "
+Character="\"Object.Actor.Tags\" "
+Pawn="\"Object.Actor.Tags\" "
+2DSideScrollerCharacter_C="\"Object.Actor.Tags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Heal.Heal;
@@ -2238,7 +2248,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/ResetTutorial2.ResetTutorial2;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial2_Ruins.Tutorial2_Ruins;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial1_Ruins.Tutorial1_Ruins;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/ResetFallingPlat.ResetFallingPlat;
 
 [MessageLog]
 LastLogListing=PIE
