--- a/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
@@ -7,3 +7,6 @@ HostOverride=
 [SourceControl.SourceControlSettings]
 Provider=Git
 
+[GitSourceControl.GitSourceControlSettings]
+BinaryPath=C:/Users/5926001686/AppData/Local/Programs/Git/bin/git.exe
+
